# auto-alignment

./: .gitignore  Cargo.toml  README.md  config.toml
crates/auto-visibility-2023/: Cargo.toml
crates/auto-visibility-2023/src/: main.rs
crates/calculate-visibility/: Cargo.toml
crates/calculate-visibility/examples/: dl950-visibility.rs
crates/calculate-visibility/src/: lib.rs
crates/dl950acqapi/: Cargo.toml
crates/dl950acqapi-sys/: Cargo.toml  build.rs  wrapper.h
crates/dl950acqapi/examples/: connection.rs  get-once.rs
crates/dl950acqapi/src/: lib.rs
crates/mirrormount-joystick/: Cargo.toml
crates/mirrormount-joystick/src/: main.rs
crates/pamc112/: Cargo.toml
crates/pamc112-cli/: Cargo.toml
crates/pamc112-cli/src/: main.rs
crates/pamc112-experiment/: Cargo.toml
crates/pamc112-experiment/src/: main.rs
crates/pamc112/src/: lib.rs
crates/serial-wrapper/: Cargo.toml
crates/serial-wrapper/src/: lib.rs
crates/spcm/: Cargo.toml
crates/spcm-gui/: Cargo.toml
crates/spcm-gui/src/: main.rs
crates/spcm-sys/: Cargo.toml  build.rs  wrapper.h
crates/spcm/examples/: dds.rs  dds_exact_params.rs
crates/spcm/src/: card_type.rs  lib.rs
crates/tm2070/: Cargo.toml
crates/tm2070-continuous-measurement/: Cargo.toml
crates/tm2070-continuous-measurement/src/: main.rs
crates/tm2070-gui/: Cargo.toml
crates/tm2070-gui/src/: main.rs
crates/tm2070/examples/: cli.rs
crates/tm2070/src/: angle.rs  lib.rs
src/: lib.rs  main.rs
