[package]
name = "mirrormount-joystick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bstr = "1.9.1"
clap = { version = "4.5.4", features = ["derive"] }
fs-err = "2.11.0"
itertools = "0.12.1"
sdl2 = { version = "0.36.0", path = "../rust-sdl2/", features = ["no_more_string_error", "ttf"] }
serde = { version = "1.0.198", features = ["derive"] }
serialport = "4.3.0"
toml = "0.8.12"
