[package]
name = "auto-visibility-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
dl950acqapi = { version = "0.1.0", path = "../dl950acqapi" }
fs-err = "2.11.0"
pamc112 = { version = "0.1.0", path = "../pamc112" }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
