[package]
name = "calculate-visibility"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
ordered-float = "4.2.0"
polyfit-rs = "0.2.1"

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
dl950acqapi = { path = "../dl950acqapi" }
