[package]
name = "dl950acqapi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
dl950acqapi-sys = { version = "0.1.0", path = "../dl950acqapi-sys" }
sealed = "0.5.0"
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
