[package]
name = "mirrormount-joystick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
anyhow = "1.0.82"
simple_logger = "4.3.3"
sdl2 = { version = "0.36.0", path = "../../../rust-sdl2/", features = ["no_more_string_error", "ttf"] }
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
pamc112 = { version = "0.1.0", path = "../pamc112" }
fs-err = "2.11.0"
