[package]
name = "pamc112-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
ctrlc = "3.4.4"
env_logger = "0.11.3"
fs-err = "2.11.0"
log = "0.4.21"
pamc112 = { version = "0.1.0", path = "../pamc112", features = ["clap"] }
radians = "0.3.1"
tm2070 = { version = "0.1.0", path = "../tm2070" }
