[package]
name = "spcm"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
bstr = "1.9.1"
enumset = "1.1.3"
num_enum = "0.7.2"
seq-macro = "0.3.5"
spcm-sys = { version = "0.1.0", path = "../spcm-sys" }
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
