[package]
name = "tm2070-continuous-measurement"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
env_logger = "0.11.3"
fs-err = "2.11.0"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tm2070 = { version = "0.1.0", path = "../tm2070" }
