[package]
name = "tm2070-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
fs-err = { version = "2.11.0", features = ["tokio"] }
iced = { version = "0.12.1", features = ["canvas", "tokio"] }
itertools = "0.13.0"
log = "0.4.21"
ordered-float = "4.2.0"
tm2070 = { version = "0.1.0", path = "../tm2070" }
tokio = { version = "1.37.0", features = ["sync", "macros", "time"] }
