[package]
name = "tm2070"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bstr = "1.9.1"
log = "0.4.21"
radians = "0.3.1"
serial-wrapper = { version = "0.1.0", path = "../serial-wrapper" }
serialport = "4.3.0"
